# rodoh

./: package.json  pnpm-lock.yaml
apps/desktop_app/: package.json
apps/desktop_app/src-tauri/: Cargo.toml  tauri.conf.json
apps/editor/: components.json  index.html  module.d.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/editor/src/: App.css  App.tsx  index.css
apps/editor/src/hooks/: useFetchVideo.ts
apps/editor/src/lib/: db.ts
apps/editor/src/routes/: index.tsx
apps/editor/src/store/: editor.store.ts  index.ts  video.ts
apps/editor/src/types/: store.interface.ts
apps/editor/src/utils/: colors.ts  draw-canvas-color.ts  index.ts
apps/extension/: package.json  pnpm-lock.yaml  vite.config.ts  vite.config.ts.timestamp-1749239774456-87152a8d75efa.mjs
apps/extension/src/: background.ts  content-script.ts  manifest.json  popup.css  popup.tsx
apps/extension/src/enums/: messages.ts
apps/extension/src/hooks/: useGetUserMedia.ts  useMediaCapture.ts  useZoomPan.ts
apps/extension/src/pages/: Popup.css  Popup.tsx
apps/extension/src/utils/: db.ts
apps/native/: index.html  package.json  vite.config.ts
apps/native/src/: App.tsx
apps/native/src-tauri/: Cargo.toml  tauri.conf.json
apps/native/src-tauri/src/: main.rs
apps/native/src/configs/: axios.config.ts
apps/native/src/store/: index.ts
apps/native/src/utils/: numbers.ts
apps/site/: package-lock.json  package.json
apps/site/public/: rodo-cursor.cur
apps/site/src/components/: Welcome.astro  header.astro
apps/site/src/data/: index.ts
(+38 files in other folders)
