[package]
name = "native"
version = "0.1.0"
description = "A screen recorder application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["shell-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
screenshots = "0.8.5"
image = "0.24"
chrono = "0.4"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
ffmpeg-next = "6.1"
tempfile = "3.10"

[features]
custom-protocol = ["tauri/custom-protocol"]

